tests/baselines/reference/parservoidInQualifiedName2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName2.ts (3 errors) ====
    var v : x.void;
              ~~~~
!!! error TS1003: Identifier expected.
                  ~
!!! error TS1109: Expression expected.
            ~~
!!! error TS2304: Cannot find name 'x'.